--- a/mini-api/src/main/resources/application.properties
+++ b/mini-api/src/main/resources/application.properties
@@ -59,8 +59,8 @@ pagehelper.params=count=countSql
 
 
 # \u6587\u4EF6\u4E0A\u4F20\u914D\u7F6E
-spring.http.multipart.maxFileSize=100Mb
-spring.http.multipart.maxRequestSize=1000Mb
+#spring.http.multipart.maxFileSize=100Mb
+#spring.http.multipart.maxRequestSize=1000Mb
 
 ############################################################
 #
