--- a/mini-api/src/main/resources/resource.properties
+++ b/mini-api/src/main/resources/resource.properties
@@ -1,3 +1,3 @@
 com.imooc.zookeeperServer=192.168.1.210:2181
 com.imooc.bgmServer=http://192.168.1.2:8080/mvc
-com.imooc.fileSpace=C:\\imooc_videos_dev
+com.imooc.fileSpace=/Users/js/Desktop/java_workspace/litter_video/a_litter
